# fdringdown

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: GW150914.py  GW190521.py  ringdown_waveforms.ipynb
examples/GW150914/: GW150914.py
examples/GW150914/GWTC1_PSD/: README.md
fdringdown/: __init__.py  interferometer.py  likelihood.py  posterior.py  prior.py  qnm.py  utils.py  waveforms.py
fdringdown/Events/: Event.py  GWevent.py  NRevent.py  SXSevent.py
fdringdown/data/interferometers/: H1.txt  L1.txt  README.md  V1.txt
fdringdown/data/interferometers/noise_curves/: H1_GW150914.txt  L1_GW150914.txt
notebooks/: amplitude_prior_transform.ipynb  ellipticity_prior_transform.ipynb  form_of_the_likelihood.ipynb  generating_noise.ipynb
notebooks/GW190521/: mass_spin_figure.ipynb  on_the_gw190521_ringdown_start_time.ipynb  plot_utils.py  start_time_figure.ipynb  summary_figure.ipynb
